# zlib-rs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  loop-match.sh  qemu-cargo-config.toml  replicate-labeled-match-benchmarks.sh  zlib_benchmarks.json
.cargo/: config.toml
.github/actions/benchmarker/: Cargo.toml  action.yml
.github/workflows/: bench.yml  checks.yaml  miri.yaml
benchmarker/src/: bench.rs  main.rs
docs/: release.md
dynamic-libz-sys/: Cargo.toml  README.md
dynamic-libz-sys/src/: generated.rs
examples/: compress.rs  uncompress.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checksum.rs  compress.rs  compress_gz.rs  crc32.rs  deflate_fast.rs  deflate_huff.rs  deflate_medium.rs  deflate_quick.rs  deflate_rle.rs  deflate_slow.rs  deflate_stored.rs  end_to_end.rs  infback.rs  inflate_chunked.rs  prefix.rs  swap_bytes.rs  uncompress.rs  uncompress2.rs  uncompress_gzip.rs  uncompress_random_input.rs
libz-rs-sys/: Cargo.toml  README.md
libz-rs-sys-cdylib/: Cargo.toml  README.md  example.c  include  test_gzio.c  zpipe.c  zpipe_no_std.c
libz-rs-sys-cdylib/src/: gz.rs  lib.rs
libz-rs-sys/examples/: compress.rs  crc32_bench.rs  uncompress.rs
libz-rs-sys/include/: zconf.h  zlib.h  zlib.map
libz-rs-sys/src/: gz.rs  lib.rs
libz-rs-sys/src/tests/: deflate.rs  helpers.rs  inflate.rs  mod.rs  zlib_ng_cve.rs
load-dynamic-libz-ng/: Cargo.toml  crc32.c
load-dynamic-libz-ng/src/: generated.rs  lib.rs
minideflate/: Cargo.toml
minideflate/src/: main.rs
src/: adler32.rs  allocate.rs  bitreader.rs  c_api.rs  compare256.rs  deflate.rs  dynamic.rs  hash_calc.rs  inflate.rs  inftrees.rs  lib.rs  longest_match.rs  pending.rs  read_buf.rs  slide_hash.rs  trees_tbl.rs  window.rs
src/deflate/: hash_calc.rs  longest_match.rs  slide_hash.rs  window.rs
src/deflate/algorithm/: fast.rs  huff.rs  medium.rs  quick.rs  rle.rs
src/deflate_algorithm/: fast.rs  huff.rs  medium.rs  mod.rs  quick.rs  rle.rs  slow.rs  stored.rs
src/inflate/: inftrees.rs  read_buf.rs  window.rs
test-libz-rs-sys/: Cargo.toml  README.md
test-libz-rs-sys/examples/: blogpost-compress.rs  blogpost-uncompress.rs  compress.rs  crc32_bench.rs  gix-blame.rs  overflow.rs  precompute.rs  uncompress.rs
test-libz-rs-sys/src/: deflate.rs  end_to_end.rs  gz.rs  helpers.rs  infback.rs  inflate.rs  lib.rs  stable.rs  zlib_ng_cve.rs
tests/: deflate.rs  inflate.rs
zlib-rs/: Cargo.toml
zlib-rs/src/: adler32.rs  allocate.rs  c_api.rs  cpu_features.rs  crc32.rs  crc32_pclmulqdq.rs  deflate.rs  dynamic.rs  inflate.rs  lib.rs  read_buf.rs  stable.rs  weak_slice.rs
zlib-rs/src/adler32/: avx2.rs  avx512.rs  avx_vnni.rs  generic.rs  lsx.rs  neon.rs  wasm.rs
zlib-rs/src/crc32/: acle.rs  braid.rs  combine.rs  loongarch.rs  pclmulqdq.rs  pmull.rs  vpclmulqdq.rs  zbc.rs  zbkc.rs
zlib-rs/src/deflate/: compare256.rs  hash_calc.rs  longest_match.rs  pending.rs  slide_hash.rs  sym_buf.rs  trees_tbl.rs  window.rs
zlib-rs/src/deflate/algorithm/: fast.rs  huff.rs  medium.rs  mod.rs  quick.rs  rle.rs  slow.rs  stored.rs
zlib-rs/src/inflate/: bitreader.rs  infback.rs  inftrees.rs  read_buf.rs  window.rs  writer.rs
