[package]
name = "zlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__internal-fuzz = ["libz-ng-sys", "arbitrary"]

[dependencies]
libc = "0.2.151"
libz-ng-sys = { version = "1.1.12", optional = true }
arbitrary = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
libloading = "0.8.1"
libz-ng-sys = "1.1.12"

[profile.release]
debug = true
