[workspace]
members = [
    "zlib-rs",
    "libz-rs-sys",
    "load-dynamic-libz-ng",
]
exclude = [ ]

# Without the `-p` flag, cargo ignores `--no-default-features` when you have a
# workspace, and without `resolver = "2"` here, you can't use `-p` like this.
resolver = "2"

# Global settings for our crates
[workspace.package]
edition = "2021"
repository = "https://github.com/memory-safety/zlib-rs"
readme = "./README.md"
description = "A memory-safe zlib implementation written in rust"
publish = true
# rust-version = "1.67" # MSRV

[profile.release]
debug = true

[workspace.dependencies]
libloading = "0.8.1"
libz-ng-sys = { version = "1.1.12" }
arbitrary = { version = "1.0" }

libc = "0.2.153" # TODO remove

zlib-rs = { path = "./zlib-rs" }
load-dynamic-libz-ng = { path = "./load-dynamic-libz-ng" }

