[workspace]
members = [
    "zlib-rs",
    "libz-rs-sys",
    "test-libz-rs-sys",
    "dynamic-libz-sys",
]
exclude = [
    "libz-rs-sys-cdylib",
]

# Without the `-p` flag, cargo ignores `--no-default-features` when you have a
# workspace, and without `resolver = "2"` here, you can't use `-p` like this.
resolver = "2"

# Global settings for our crates
[workspace.package]
version = "0.4.1"
edition = "2021"
license = "Zlib"
repository = "https://github.com/trifectatechfoundation/zlib-rs"
homepage = "https://github.com/trifectatechfoundation/zlib-rs"
readme = "./README.md"
description = "A memory-safe zlib implementation written in rust"
publish = true
rust-version = "1.75" # MSRV

[profile.release]
debug = true

[profile.dev]
opt-level = 1 # required for the tail calls in inflate to optimize

[workspace.dependencies]
libloading = "0.8.1"
libz-sys = { version = "1.1.21", default-features = false, features = ["zlib-ng"] } # use libz-ng in libz compat mode
arbitrary = { version = "1.0" }
quickcheck = { version = "1.0.3", default-features = false, features = [] }

libz-rs-sys = { version = "0.4.1", path = "./libz-rs-sys", default-features = false }
zlib-rs = { version = "0.4.1", path = "./zlib-rs", default-features = false }
dynamic-libz-sys = { path = "./dynamic-libz-sys" }

