[package]
name = "libz-rs-sys-cdylib"
readme = "README.md"

[lib]
name = "z_rs" # turns into e.g. `libz_rs.so`
crate-type=["cdylib"]

[features]
default = ["c-allocator"] # when used as a cdylib crate, use the c allocator
c-allocator = ["libz-rs-sys/c-allocator"] # by default, use malloc/free for memory allocation
rust-allocator = ["libz-rs-sys/rust-allocator", "libz-rs-sys/std"] # by default, use the rust global alloctor for memory allocation
custom-prefix = ["libz-rs-sys/custom-prefix"] # use the LIBZ_RS_SYS_PREFIX to prefix all exported symbols

[dependencies]
libz-rs-sys = { path = "../libz-rs-sys", default-features = false }
