[package]
name = "libz-rs-sys"
readme.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
zlib-rs = { workspace = true, features = [ "__internal-test" ] }

[dev-dependencies]
libz-ng-sys.workspace = true
libloading.workspace = true
load-dynamic-libz-ng.workspace = true
libc.workspace = true
crc32fast = "1.3.2"
quickcheck = "1.0.3"
