[package]
name = "libz-rs-sys"
readme = "README.md"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type=["rlib", "cdylib"]

[features]
default = ["std", "rust-allocator"] # when used as a rust crate, use the rust allocator
c-allocator = ["zlib-rs/c-allocator"] # by default, use malloc/free for memory allocation
rust-allocator = ["zlib-rs/rust-allocator"] # by default, use the rust global alloctor for memory allocation
std = ["zlib-rs/std"] # assume `::std` is available

[dependencies]
zlib-rs = { workspace = true, default-features = false }

[dev-dependencies]
zlib-rs = { workspace = true, default-features = false, features = ["std", "__internal-test"] }
libz-sys.workspace = true
libloading.workspace = true
load-dynamic-libz-ng.workspace = true
quickcheck.workspace = true
crc32fast = "1.3.2"
