[package]
name = "test-libz-rs-sys"
readme = "README.md"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true


[features]
default = ["rust-allocator", "gz"]
c-allocator = ["libz-rs-sys/c-allocator"]
rust-allocator = ["libz-rs-sys/rust-allocator"]
gz = ["libz-rs-sys-cdylib/gz", "dep:libc"]

[dependencies]
zlib-rs = { workspace = true, default-features = false, features = ["std", "c-allocator", "rust-allocator", "__internal-test"] }
libz-rs-sys = { workspace = true, default-features = false, features = ["std", "testing-prefix"] }
libz-rs-sys-cdylib = { path = "../libz-rs-sys-cdylib", default-features = false, features = ["std", "c-allocator"] }
libz-sys.workspace = true
libc = { version = "0.2.171", optional = true }

[dev-dependencies]
quickcheck.workspace = true
crc32fast = "1.3.2"
tempfile = "3.19.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
libloading.workspace = true
dynamic-libz-sys.workspace = true
