[package]
name = "zlib-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__internal-fuzz = ["libz-ng-sys", "arbitrary"]
__internal-test = []


[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
libz-ng-sys = { workspace = true, optional = true }
libc.workspace = true

[dev-dependencies]
libloading = "0.8.1"
libz-ng-sys = "1.1.12"
crc32fast = "1.3.2"
quickcheck = "1.0.3"
load-dynamic-libz-ng.workspace = true
