[package]
name = "zlib-rs"
readme = "README.md"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "c-allocator"]
std = ["rust-allocator"]
c-allocator = [] # expose a malloc-based C allocator
rust-allocator = [] # expose a rust global alloctor
__internal-fuzz = ["arbitrary"]
__internal-test = ["quickcheck"]


[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
libz-sys = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
libloading = "0.8.1"
libz-ng-sys = "1.1.12"
crc32fast = "1.3.2"
quickcheck.workspace = true
load-dynamic-libz-ng.workspace = true
